Changes for 3.2.5rc1

New features:

Bug fixes:
..F....... [ZBX-11925] fixed parsing of nested host groups (gcalenko, Sasha)
..F....... [ZBX-11345] fixed webscenario update error when step does not exist (gcalenko)
..F....... [ZBX-11975] fixed undefined index error in web scenario step creation (vmurzins)
........S. [ZBX-11980] fixed incorrect type handling in SSH checks (abs)
...G...... [ZBX-11959] fixed memory leak in the agent on OpenBSD, FreeBSD and NetBSD (abs)
..F....... [ZBX-11984] fixed host hyperlink style on event details page (gcalenko)
.......PS. [ZBX-11807] fixed poller stalling due to incorrect handling of unixODBC library (viktors)
..F....... [ZBX-11877] fixed undefined index error in screens for triggers without events data (gcalenko)
A......... [ZBX-9358] improved randomness in session ID generation (vmurzins)
..F....... [ZBX-11933] added fullscreen parameter in link to submap in maps (vmurzins)
A......... [ZBX-11893] fixed permission issue, when importing hosts that are monitored by proxy by Zabbix Admin type user (vmurzins)
..F....... [ZBX-11905] fixed redirect to original requested page after login (vmurzins)
..F....... [ZBX-11907] fixed undefined index in event details page (miks)
........S. [ZBX-11931] fixed trigger lastchange update (wiper)
.......PS. [ZBX-11864] fixed formatting of URLs if an IPv6 is used in simple HTTPS checks (abs)
........S. [ZBX-11738] fixed performing actions for problemas that have started and resolved while another problems escalation is executed (vikotrs)
..F....... [ZBX-6851] fixed zero number display in Event ID column in windows eventlog history (vmurzins)
........S. [ZBX-11829] fixed generation of problems in multiple event mode (Sergejs, abs)
..F....... [ZBX-11624] fixed undefined index error for regular expressions form (vmurzins)
.......PS. [ZBX-11855] fixed data truncation when escaping strings that contain carriage return (vso)